--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,6 @@
   },
   "homepage": "https://github.com/babiloof/OpenAI-Bot#readme",
   "dependencies": {
-    "discord.js": "^14.11.0",
-    "dotenv": "^16.1.4"
+    "discord.js": "^14.11.0"
   }
 }
