--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/babiloof/OpenAI-Bot#readme",
   "dependencies": {
-    "discord.js": "^14.11.0"
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
+    "discord.js": "^14.11.0",
+    "ffmpeg-static": "^5.1.0",
+    "sodium": "^3.0.2"
   }
 }
